# aprendizaje-maquinas-trabajo-final

./: .gitignore  LICENSE  README.md  TASKS.md  main.py  pyproject.toml
notebooks/: eda.ipynb  models.ipynb  result_analysis.ipynb
notebooks/results/ResNet18/: classification_report.csv  confusion_matrix.csv  history.csv  summary.csv
notebooks/results/ResNet18_Pretrained/: classification_report.csv  confusion_matrix.csv  history.csv  summary.csv
notebooks/results/VGGmini/: classification_report.csv  confusion_matrix.csv  history.csv  summary.csv
notebooks/results/lenet5/: classification_report.csv  confusion_matrix.csv  history.csv  summary.csv
presentacion/: Poster_Molina-Duque-Cross-Henao.pptx
scripts/: bootstrap.ps1  bootstrap.sh
src/: __init__.py  env_config.py
