[project]
name = "aprendizaje-maquinas-trabajo-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tenacity>=9.1.4",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
